shift enter to new line, history scrolls, more settings, json parse fix

--- a/ollama-web-ui/ollama.css
+++ b/ollama-web-ui/ollama.css
@@ -66,6 +66,7 @@ body {
     overflow: hidden;
     text-overflow: ellipsis;
     max-width: 200px;
+    min-height: 35px;
 }
 
 #sidebar button:hover {
@@ -77,11 +78,16 @@ body {
 }
 
 #chatHistory {
+    overflow-y: scroll;
+    flex: 1;
+}
+
+#chatHistory > div {
     display: flex;
     flex-direction: column-reverse;
     justify-content: start;
-    overflow-y: scroll;
-    flex: 1;
+    width: 100%;
+    max-height: none;
     row-gap: var(--spacing);
     text-align: center;
 }
@@ -195,9 +201,14 @@ body {
     height: 100vh;
     max-width: 100vw;
     max-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    row-gap: var(--spacing);
 }
 
-#settingsPage input, #settingsPage button {
+#settingsPage input, #settingsPage button, #settingsPage textarea {
     background-color: var(--primary);
 }
 
@@ -236,8 +247,4 @@ hr {
 
 #chatHistory button.selected {
     border: 3px solid var(--quaternary);
-}
-
-div.hidden {
-    display: none;
 }
